--- a/deep-learning.html
+++ b/deep-learning.html
@@ -55,11 +55,11 @@
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://plumerai.workable.com/j/3A0A0AB1D2'>Plumerai - Jobs: Deep Learning Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://plumerai.workable.com/j/3A0A0AB1D2'>Plumerai - Jobs: Deep Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Amsterdam North Holland, Netherlands</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://plumerai.workable.com/j/581DD6BB2C'>Plumerai - Jobs: Deep Learning Scientist - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://plumerai.workable.com/j/581DD6BB2C'>Plumerai - Jobs: Deep Learning Scientist - Apply online</a></h5> 
 <p><span class="badge badge-light">Amsterdam North Holland, Netherlands</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -93,7 +93,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... Apply online for the job of Deep Learning Engineer at Plumerai.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999691933292-internship-deep-learning-for-the-dynamic-object-detection-for-autonomous-driving'>Bosch Group Internship Deep Learning For The Dynamic Object Detection For Autonomous  Driving | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999691933292-internship-deep-learning-for-the-dynamic-object-detection-for-autonomous-driving'>Bosch Group Internship Deep Learning For The Dynamic Object Detection For Autonomous  Driving | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Stuttgart, Germany</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -113,7 +113,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/phrasee/5f72ab9f-e126-4f78-9708-11a60d579691'>Phrasee - QA Tester (AI, NLG, Deep Learning)</a></h5> 
+<h5><a href='https://jobs.lever.co/phrasee/5f72ab9f-e126-4f78-9708-11a60d579691'>Phrasee - QA Tester (AI, NLG, Deep Learning)</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -269,7 +269,7 @@ daytime?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/California---Palo-Alto/Senior--Lead--Principal-Deep-Learning-Engineer_JR41262'>Senior/ Lead/ Principal Deep Learning Engineer</a></h5> 
+<h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/California---Palo-Alto/Senior--Lead--Principal-Deep-Learning-Engineer_JR41262'>Senior/ Lead/ Principal Deep Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>May 27, 2019 ... You have a strong background in one or more of the following fields: deep 
 learning, machine learning, natural language processing, computer vision, voice,
@@ -355,11 +355,11 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Deep Learning Engineer at DeepCure.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pony-dot-ai.workable.com/j/6BD8F26B0F'>pony.ai - Jobs: Senior Software Engineer - Deep Learning - Apply online</a></h5> 
+<h5><a href='https://pony-dot-ai.workable.com/j/6BD8F26B0F'>pony.ai - Jobs: Senior Software Engineer - Deep Learning - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://saicusa.workable.com/j/4930916B14'>SAIC Innovation Center - Jobs: Machine Learning Engineer (Deep learning) - Apply online</a></h5> 
+<h5><a href='https://saicusa.workable.com/j/4930916B14'>SAIC Innovation Center - Jobs: Machine Learning Engineer (Deep learning) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-01</p>
 <hr/>
@@ -375,15 +375,15 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/baylabs/c3ac8da0-0b48-4e2e-876f-698406c5ddb0'>Bay Labs - Deep Learning Research Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/baylabs/c3ac8da0-0b48-4e2e-876f-698406c5ddb0'>Bay Labs - Deep Learning Research Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/o5YV7fwP'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Neural Processor (Deep Learning) Research Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/o5YV7fwP'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Neural Processor (Deep Learning) Research Scientist</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/oAFT7fwZ'>Samsung Semiconductor, Inc. Careers - Research Engineer-Deep Learning Theory and Algorithms</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oAFT7fwZ'>Samsung Semiconductor, Inc. Careers - Research Engineer-Deep Learning Theory and Algorithms</a></h5> 
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -395,7 +395,7 @@ Project?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/okRT7fwV'>Samsung Semiconductor, Inc. Careers - Deep Learning Engineer (Speech and Language Processing)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/samsungssi/job/okRT7fwV'>Samsung Semiconductor, Inc. Careers - Deep Learning Engineer (Speech and Language Processing)</a></h5> 
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
